新增基于elastic search的搜索引擎

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,3 +43,6 @@ spring.redis.pool.max-idle=8
 spring.redis.pool.min-idle=0
 #连接超时时间（毫秒）
 spring.redis.timeout=0
+
+#ElasticSearch
+spring.data.elasticsearch.cluster-nodes = 127.0.0.1:9300
