--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,8 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.9.RELEASE</version>
+		  <version>1.5.9.RELEASE</version>
+		<!--<version>2.0.1.RELEASE</version>-->
 	</parent>
 	<dependencies>
 		<!-- springboot web -->
@@ -40,6 +41,8 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 		</dependency>
+
+
 		<!-- springboot test -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -86,7 +89,8 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.21</version>
+			<!--<version>5.1.21</version>-->
+			<version>8.0.12</version>
 		</dependency>
 
 		<!-- junit -->
